--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -39,7 +39,7 @@
             <td>
               <a href="{{ company.website }}"
                  title="Visit {{ company.website }}"
-                 target="blank">{{ company.website }}</a>
+                 target="_blank">{{ company.website }}</a>
             </td>
             <td class="d-none d-lg-table-cell">
               <span class="tooltray-container d-none">
